Modernize Java 21 compatibility: eliminate deprecated wrapper constructors and enhance type safety
- Replace all deprecated wrapper class constructors (new Integer(), new Boolean(), etc.) with valueOf() methods across om, web, and test modules
- Add missing @Deprecated annotation to ArrayField.getItemClass() method
- Continue comprehensive type-safe improvements across metadata framework
- Eliminate remaining Java modernization warnings for better Java 21 compatibility
- All tests pass successfully with modernized code

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>